[gd_scene load_steps=23 format=3 uid="uid://cdfj5mokmxuxt"]

[ext_resource type="Script" uid="uid://c22a2ujcasbrv" path="res://scripts/in_game/asteroid.gd" id="1_mgqqj"]
[ext_resource type="Texture2D" uid="uid://c4sr8oscwaor2" path="res://assets/sprites/levels_sprites/asteroide01.png" id="2_ynw8h"]
[ext_resource type="Texture2D" uid="uid://trvwq0qrgkv5" path="res://assets/sprites/quantum_sprites/asteroide01.png" id="3_qigiv"]
[ext_resource type="Texture2D" uid="uid://dx5bfay4jiixu" path="res://assets/sprites/levels_sprites/asteroide02.png" id="3_tcq3t"]
[ext_resource type="Texture2D" uid="uid://det8kav00i84l" path="res://assets/sprites/levels_sprites/asteroide03.png" id="4_huldx"]
[ext_resource type="Texture2D" uid="uid://pbejneyrq1r8" path="res://assets/sprites/quantum_sprites/asteroide02.png" id="5_6unbw"]
[ext_resource type="Texture2D" uid="uid://b60r3ywngvxtm" path="res://assets/sprites/levels_sprites/explode_asteroide.png" id="5_dgnjn"]
[ext_resource type="Texture2D" uid="uid://dtqj60jwhf2qj" path="res://assets/sprites/levels_sprites/minerio.png" id="5_sf38f"]
[ext_resource type="Texture2D" uid="uid://fb45i43qb8w7" path="res://assets/sprites/quantum_sprites/asteroide03.png" id="7_kox2f"]
[ext_resource type="AudioStream" uid="uid://bg3a6bx85s7d3" path="res://assets/sounds/in_game/EXPLOS√ÉO 2 SEM PARTICULAS.wav" id="10_dweun"]
[ext_resource type="FontFile" uid="uid://d3qxk71omhsy" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="11_7qt8v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_erx0o"]
atlas = ExtResource("3_qigiv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_68c2d"]
atlas = ExtResource("5_6unbw")
region = Rect2(0, 0, 24, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg1ew"]
atlas = ExtResource("7_kox2f")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg5wq"]
atlas = ExtResource("5_dgnjn")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fycg"]
atlas = ExtResource("5_dgnjn")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixphh"]
atlas = ExtResource("5_dgnjn")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6idua"]
atlas = ExtResource("5_dgnjn")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_06p11"]
atlas = ExtResource("5_dgnjn")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_slfqt"]
atlas = ExtResource("5_dgnjn")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_jogq0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ynw8h")
}],
"loop": true,
"name": &"asteroid01",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_erx0o")
}],
"loop": true,
"name": &"asteroid01-quantum",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_tcq3t")
}],
"loop": true,
"name": &"asteroid02",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68c2d")
}],
"loop": true,
"name": &"asteroid02-quantum",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_huldx")
}],
"loop": true,
"name": &"asteroid03",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg1ew")
}],
"loop": true,
"name": &"asteroid03-quantum",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_sf38f")
}],
"loop": true,
"name": &"coin",
"speed": 5.0
}, {
"frames": [{
"duration": 0.2,
"texture": SubResource("AtlasTexture_yg5wq")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_8fycg")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_ixphh")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_6idua")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_06p11")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_slfqt")
}],
"loop": false,
"name": &"explosion",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vyoty"]
radius = 8.0

[node name="Asteroid" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_mgqqj")

[node name="Asteroid" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jogq0")
animation = &"asteroid03-quantum"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vyoty")

[node name="AsteroidExplosion" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_dweun")

[node name="AsteroidLife" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 8.0
offset_top = -12.0
offset_right = 61.0
offset_bottom = 4.0
theme_override_colors/font_color = Color(0.705882, 0.709804, 0.258824, 1)
theme_override_fonts/font = ExtResource("11_7qt8v")
theme_override_font_sizes/font_size = 13
text = "10.0"

[node name="DamageText" type="Node2D" parent="."]
position = Vector2(0, -17)

[connection signal="timeout" from="AsteroidExplosion" to="." method="_on_asteroid_explosion_timeout"]
[connection signal="timeout" from="AsteroidLife" to="." method="_on_asteroid_life_timeout"]
